--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.12.3
 blinker==1.7.0
 breadability==0.1.20
 certifi==2024.2.2
@@ -18,7 +19,9 @@ numpy==1.26.3
 pycountry==23.12.11
 regex==2023.12.25
 requests==2.31.0
+soupsieve==2.5
 sumy==0.11.0
 tqdm==4.66.1
 urllib3==2.2.0
 Werkzeug==3.0.1
+wikipedia==1.4.0
